Fix mobile menu hidden by overflow on nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,6 @@ nav {
   padding: 0 2rem;
   width: 100%;
   max-width: 100vw;
-  overflow: hidden;
 }
 
 .nav-inner {
